--- a/todo.html
+++ b/todo.html
@@ -2,54 +2,109 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="todo.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TODO LIST</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            background-color: #f0f4f8;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #333;
+        }
+
+        .main-container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 40px;
+            flex-wrap: wrap;
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            width: 250px;
+            margin-right: 10px;
+            border: 2px solid #ccc;
+            border-radius: 8px;
+        }
+
+        #task>div {
+            margin-top: 10px;
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        img {
+            width: 800px;
+            border-radius: 12px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>TODO LIST</h1>
-    <div>
-        <input type="text">
-        <button onclick="add()">Add</button>
-        <div id="task"></div>
-    </div>
-</body>
-<script>
-    let arr = [];
-    function add() {
-        let task = document.querySelector("input").value;
-        arr.push({
-            name: task
-        })
-        disp();
-    }
-    function disp() {
-        let html = ''
-        for (let i = 0; i < arr.length; i++) {
-            let task = arr[i];
-            html = `<div>${task.name}
-                <button onclick="del(${i})">delete</button>
-                </div>`+ html
-        }
-        document.querySelector("#task").innerHTML = html;
-    }
-    function del(index) {
-        arr.splice(index, 1);
-        disp();
-    }
-    fetch("http://localhost:3000/todos/create", {
-        method: "POST",
-        headers: {
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-            id: 1,
-            todo: "Learn Express"
-        })
-    }).then(res => res.text())
 
-</script>
+    <h1>TODO LIST</h1>
+
+    <div class="main-container">
+        <div>
+            <input type="text" id="usr" placeholder="Enter a task" />
+            <button type="button" class="btn btn-success" onclick="add()">Add</button>
+            <div id="task"></div>
+        </div>
+        <div>
+            <img src="flat-scrum-task-board-with-color-stick-paper-notes_88138-931.avif" alt="Task board" />
+        </div>
+    </div>
+
+    <script>
+        let arr = [];
+        function add() {
+            let task = document.querySelector("input").value;
+            arr.push({
+                name: task
+            })
+            disp();
+        }
+
+        function disp() {
+            let html = ''
+            for (let i = 0; i < arr.length; i++) {
+                let task = arr[i];
+                html = `<div>${task.name}
+                  <button class="btn btn-danger btn-sm float-end" onclick="del(${i})">Delete</button>
+                </div>` + html
+            }
+            document.querySelector("#task").innerHTML = html;
+        }
+
+        function del(index) {
+            arr.splice(index, 1);
+            disp();
+        }
+
+        fetch("http://localhost:3000/todos/create", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                id: 1,
+                todo: "Learn Express"
+            })
+        }).then(res => res.text())
+    </script>
+
+</body>
 
 </html>
